# securityonion-image

./: .gitignore  README.md
so-acng/: Dockerfile
so-curator/: Dockerfile  entrypoint.sh
so-domainstats/: Dockerfile  entrypoint.sh
so-elastalert/: Dockerfile  README.md
so-elastic-agent/: Dockerfile
so-elastic-agent-builder/: Dockerfile
so-elastic-fleet-package-registry/: Dockerfile
so-elasticsearch/: Dockerfile  elasticsearch.yml  sotls.yml
so-evtx2es/: Dockerfile  calculate_timestamp.sh
so-filebeat/: Dockerfile
so-fleet/: Dockerfile  startfleet.sh
so-fleet-launcher/: Dockerfile
so-freqserver/: Dockerfile  entrypoint.sh
so-grafana/: Dockerfile
so-idh/: Dockerfile  supervise-opencanary.conf
so-idstools/: Dockerfile  README.md  entrypoint.sh
so-influxdb/: Dockerfile  entrypoint.sh
so-kafka/: Dockerfile
so-kibana/: Dockerfile
so-logscan/: .coveragerc  .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  logscan.conf  logscan.conf.example  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
so-logstash/: Dockerfile
so-minio/: Dockerfile
so-mysql/: Dockerfile  docker-entrypoint.sh  healthcheck.sh
so-navigator/: Dockerfile
so-nginx/: Dockerfile  README.md
so-nodered/: Dockerfile  docker-make.sh
so-pcaptools/: Dockerfile  evtx_calc_timestamps.sh  timeshift.py
so-playbook/: Dockerfile
so-redis/: Dockerfile
so-sigconverter/: Dockerfile  pyproject.toml
so-soctopus/: Dockerfile  elasticsearch.py  requirements.txt
so-steno/: Dockerfile  README.md
so-strelka-backend/: Dockerfile  (+1 more)
(+205 files in other folders)
