[tool.poetry]
name = "sigconverter.io"
version = "0.1.0"
description = ""
authors = ["magicsword <info@magicsword.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "3.0.0"
sigma-cli = "*"
pysigma = "*"
pysigma-backend-elasticsearch = "*"
pysigma-pipeline-sysmon = "*"
pysigma-pipeline-windows = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

